style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Sour Gummy', cursive;
}

.container {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 16px 16px 16px 16px;
}

a {
    text-decoration: none;
}

li {
    list-style: none;
}

/* 

LANDING

*/

#landing


/* 

NAVIGATION 

*/

.nav__container

.nav__row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #9caf88; /*sage green*/
    padding: 0px 16px 0px 16px;
}

.nav__main {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: 470px;
    text-align: center;
}

.nav__logo {
    margin: 8px;
    width: 50px;
    height: 50px;
    border-radius: 10px;
}

.nav__title {
    font-size: 42px;
    color: #ca6641; /*terracotta*/
}

.nav__links {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.nav__link a {
    font-size: 20px;
    color: #f9e4bc; /*light cream*/
    padding: 0px 6px 0px 6px;
    transition: 500ms all ease;
}

.nav__link a:hover {
    cursor: pointer;
    text-decoration: underline;
}

.nav__link--primary a {
    background-color: #ca6641; /*terracotta*/
    color: #f9e4bc; /*light cream*/
    padding: 4px 12px 4px 12px;
    border-radius: 25px;
}

/* 

HEADER 

*/

.header__container {
    padding: 16px 16px 16px 16px;
    background-color: #0b797c; /*satin teal*/
    height: 632px;
}

.header__row {
    padding: 16px 16px 16px 16px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 600px;
    background-color: #f9e4bc; /*light cream*/
}

.profile__img--wrapper {
    display: flex;
    align-items: center;
    width: 200px;
    height: 200px;
}

.profile__img {
    width: 400px;
    height: 400px;
    border: 5px solid #b6b6b6; /*light gray*/
    border-radius: 10%;
}

.header__content {
    flex-direction: column;
    text-align: center;
    position: absolute;
    margin-left: 550px;
    width: 100%;
    max-width: 500px;
}

.header__title {
    font-size: 28px;
    padding-bottom: 32px;
}

.header__title--span {
    font-family:'Permanent Marker', sans-serif;
    color: #9caf88; /*sage green*/
    font-size: 38px;
}

.header__description {
    font-size: 18px;
}

/*

ABOUT

*/

.about__container {
    height: 800px;
    padding: 16px 16px 16px 16px;
    background-color: #ca6641; /*terracotta*/
}

.about__row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 768px;
    background-color: #9caf88; /*sage green*/
    padding: 16px 16px 16px 16px;
}

.about__description {
    flex-direction: column;
    text-align: center;
    width: 100%;
    max-width: 650px;
    color: #f9e4bc; /*light cream*/
    padding-left: 16px;
}

.about__title {
    padding-bottom: 48px;
    font-size: 36px;
}

.side-note {
    font-size: 22px;
    text-decoration: wavy underline;
}

.about__para {
    font-size: 20px;
    padding: 16px 0px 16px 0px;
}

.about__note {
    font-size: 16px;
    margin: 52px;
    padding: 6px 6px 6px 6px;
    border: 2px solid #ca6641; /*terracotta*/
}

.img__container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: end;
}

.about__img {
    box-sizing: border-box;
    width: 200px;
    margin: 12px 6px 12px 6px;
    border: 5px solid #b6b6b6; /*light gray*/
}

.about__img--1 {
    transform: translateX(-70px);
}

.about__img--3 {
    transform: translateX(-120px);
}

/*

EPISODES

*/

.episodes__container

.episodes__row

.episodes__description

.episodes__title

.episodes__para

.episodes__links

.episodes__link

.fa-spotify,
.fa-podcast

.episodes__tiles

.episode__tile

.episode__img

.episode__number

.episode__title

/*

CONTACT

*/



/*

FOOTER

*/

.footer__container

.footer__row {
    background-color: #9caf88; /*sage green*/
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #f9e4bc; /*light cream*/
}

.footer__note {
    color: #ca6641; /*terracotta*/
}

.footer__nav--links {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.footer__nav--link {
    text-decoration: none;
    cursor: pointer;
    color: #f9e4bc; /*light cream*/
}

.footer__divider {
    background-color: #b6b6b6; /*light gray*/
    height: 4px;
    width: 100%;
    max-width: 800px;
    margin: 16px 0px 16px 0px;
}

.footer__logo--wrapper

.footer__logo {
    width: 50px;
    height: 50px;
    border-radius: 10px;
}

.footer__copyright

.footer__social--links

.footer__social--link {
}

.fa-brands {
    height: 32px;
    width: 32px;
    background-color: #ca6641; /*terracotta*/
    border-radius: 50%;
    color: #f9e4bc; /*light cream*/
    padding: 8px 7px 8px 7px;    
}

/*SCREEN SIZE RESIZING*/

